docs/envoy/v1.24.7/_sources/api-v3/extensions/filters/network/generic_proxy/v3/generic_proxy.proto.rst.txt
.. _envoy_v3_api_file_contrib/envoy/extensions/filters/network/generic_proxy/v3/generic_proxy.proto:

Generic Proxy (proto)
=====================

.. _extension_envoy.filters.network.generic_proxy:

This extension has the qualified name ``envoy.filters.network.generic_proxy``

.. note::

  This extension is only available in :ref:`contrib <install_contrib>` images.

.. note::
  This extension is functional but has not had substantial production burn time,
  use only with this caveat.

  This extension is not hardened and should only be used in deployments
  where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.network <extension_category_envoy.filters.network>`





.. warning::
   This API feature is currently work-in-progress. API features marked as work-in-progress are not considered stable, are not covered by the :ref:`threat model <arch_overview_threat_model>`, are not supported by the security team, and are subject to breaking changes. Do not use this feature without understanding each of the previous points.



Generic proxy.




.. _envoy_v3_api_msg_extensions.filters.network.generic_proxy.v3.GenericProxy:

extensions.filters.network.generic_proxy.v3.GenericProxy
--------------------------------------------------------


:repo:`[extensions.filters.network.generic_proxy.v3.GenericProxy proto] <api/contrib/envoy/extensions/filters/network/generic_proxy/v3/generic_proxy.proto#L25>`




.. code-block:: json
  :force:

  {
    "stat_prefix": ...,
    "codec_config": {...},
    "route_config": {...},
    "filters": []
  }

.. _envoy_v3_api_field_extensions.filters.network.generic_proxy.v3.GenericProxy.stat_prefix:


stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The human readable prefix to use when emitting statistics.


.. _envoy_v3_api_field_extensions.filters.network.generic_proxy.v3.GenericProxy.codec_config:


codec_config
  (:ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`, *REQUIRED*) The codec which encodes and decodes the application protocol.


.. _envoy_v3_api_field_extensions.filters.network.generic_proxy.v3.GenericProxy.route_config:


route_config
  (:ref:`extensions.filters.network.generic_proxy.v3.RouteConfiguration <envoy_v3_api_msg_extensions.filters.network.generic_proxy.v3.RouteConfiguration>`, *REQUIRED*) The route table for the generic proxy is static and is specified in this property.


  

.. _envoy_v3_api_field_extensions.filters.network.generic_proxy.v3.GenericProxy.filters:


filters
  (**repeated** :ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`) A list of individual Layer-7 filters that make up the filter chain for requests made to the
  proxy. Order matters as the filters are processed sequentially as request events
  happen.




